force-app/main/default/objects/Janati_RR__Round_Robin_Assignment__c/Janati_RR__Round_Robin_Assignment__c.object-meta.xml
<CustomObject>
    <label>Round Robin Assignment</label>
    <nameField>
        <label>Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Round Robin Assignments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>