force-app/main/default/objects/Janati_RR__Round_Robin_Assignment__c/fields/Janati_RR__Active__c.field-meta.xml
<CustomField>
    <fullName>Janati_RR__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>