force-app/main/default/objects/Janati_RR__Round_Robin_Assignment__c/fields/Janati_RR__Notes__c.field-meta.xml
<CustomField>
    <fullName>Janati_RR__Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>