force-app/main/default/objects/Janati_RR__Round_Robin_Assignment__c/fields/Janati_RR__US_States__c.field-meta.xml
<CustomField>
    <fullName>Janati_RR__US_States__c</fullName>
    <label>US States</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alabama (AL)</fullName>
            </value>
            <value>
                <fullName>Alaska (AK)</fullName>
            </value>
            <value>
                <fullName>Arizona (AZ)</fullName>
            </value>
            <value>
                <fullName>Arkansas (AR)</fullName>
            </value>
            <value>
                <fullName>California (CA)</fullName>
            </value>
            <value>
                <fullName>Colorado (CO)</fullName>
            </value>
            <value>
                <fullName>Connecticut (CT)</fullName>
            </value>
            <value>
                <fullName>Delaware (DE)</fullName>
            </value>
            <value>
                <fullName>District of Columbia (DC)</fullName>
            </value>
            <value>
                <fullName>Florida (FL)</fullName>
            </value>
            <value>
                <fullName>Georgia (GA)</fullName>
            </value>
            <value>
                <fullName>Hawaii (HI)</fullName>
            </value>
            <value>
                <fullName>Idaho (ID)</fullName>
            </value>
            <value>
                <fullName>Illinois (IL)</fullName>
            </value>
            <value>
                <fullName>Indiana (IN)</fullName>
            </value>
            <value>
                <fullName>Iowa (IA)</fullName>
            </value>
            <value>
                <fullName>Kansas (KS)</fullName>
            </value>
            <value>
                <fullName>Kentucky (KY)</fullName>
            </value>
            <value>
                <fullName>Louisiana (LA)</fullName>
            </value>
            <value>
                <fullName>Maine (ME)</fullName>
            </value>
            <value>
                <fullName>Maryland (MD)</fullName>
            </value>
            <value>
                <fullName>Massachusetts (MA)</fullName>
            </value>
            <value>
                <fullName>Michigan (MI)</fullName>
            </value>
            <value>
                <fullName>Minnesota (MN)</fullName>
            </value>
            <value>
                <fullName>Mississippi (MS)</fullName>
            </value>
            <value>
                <fullName>Missouri (MO)</fullName>
            </value>
            <value>
                <fullName>Montana (MT)</fullName>
            </value>
            <value>
                <fullName>Nebraska (NE)</fullName>
            </value>
            <value>
                <fullName>Nevada (NV)</fullName>
            </value>
            <value>
                <fullName>New Hampshire (NH)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>