force-app/main/default/objects/Janati_RR__Round_Robin_Assignment__c/listViews/Janati_RR__All1.listView-meta.xml
<ListView>
    <fullName>Janati_RR__All1</fullName>
    <columns>NAME</columns>
    <columns>Janati_RR__Active__c</columns>
    <columns>Janati_RR__Order__c</columns>
    <columns>Janati_RR__Country__c</columns>
    <columns>Janati_RR__US_States__c</columns>
    <columns>Janati_RR__Canadian_Provinces__c</columns>
    <columns>RR_India_Cities__c</columns>
    <columns>RR_Initial_Product_of_Interest__c</columns>
    <columns>Janati_RR__Last_Member_Order_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>