force-app/main/default/objects/Janati_RR__Round_Robin_Assignment__c/listViews/Janati_RR__All_Active.listView-meta.xml
<ListView>
    <fullName>Janati_RR__All_Active</fullName>
    <columns>NAME</columns>
    <columns>Janati_RR__Order__c</columns>
    <columns>Janati_RR__Country__c</columns>
    <columns>Janati_RR__US_States__c</columns>
    <columns>Janati_RR__Canadian_Provinces__c</columns>
    <columns>Janati_RR__Active__c</columns>
    <columns>Janati_RR__Notes__c</columns>
    <columns>Janati_RR__Object__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Janati_RR__Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active</label>
</ListView>