force-app/main/default/objects/Janati_RR__Round_Robin_Assignment__c/listViews/Janati_RR__All_Assignments.listView-meta.xml
<ListView>
    <fullName>Janati_RR__All_Assignments</fullName>
    <columns>NAME</columns>
    <columns>Janati_RR__Active__c</columns>
    <columns>Janati_RR__Order__c</columns>
    <columns>Janati_RR__Country__c</columns>
    <columns>Janati_RR__US_States__c</columns>
    <columns>Janati_RR__Canadian_Provinces__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Assignments</label>
</ListView>